src/snapshots/bminor__parser__test__assignment_statement-10.snap
---
source: src/parser.rs
expression: "parse_statement(\"arr: array [1];\")"
---
Err(
    UnexpectedToken(
        "expect array type",
    ),
)
