src/snapshots/bminor__parser__test__assignment_statement-12.snap
---
source: src/parser.rs
expression: "parse_statement(\"arr: array [1] integer =;\")"
---
Err(
    UnexpectedToken(
        "expect '{' before array elements",
    ),
)
