src/snapshots/bminor__parser__test__assignment_statement-24.snap
---
source: src/parser.rs
expression: "parse_statement(\"m: map string integer =;\")"
---
Err(
    UnexpectedToken(
        "expect '{' before map values",
    ),
)
