src/snapshots/bminor__parser__test__assignment_statement-26.snap
---
source: src/parser.rs
expression: "parse_statement(\"m: map string integer = {\\\"key\\\";\")"
---
Err(
    UnexpectedToken(
        "expect ';' after key",
    ),
)
