src/snapshots/bminor__parser__test__assignment_statement-28.snap
---
source: src/parser.rs
expression: "parse_statement(\"m: map string integer = {\\\"key\\\":0;\")"
---
Err(
    UnexpectedToken(
        "expect '}' after map values",
    ),
)
